--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     </div>
 </section>
     <!-- Begin Modals -->
-    <article class="modal fade" id="icons" tabindex="-1" role="dialog" aria-labelledby="icons" aria-hidden="true">
+    <article class="modal fade" id="icons" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -190,7 +190,7 @@
         </div>
     </article>
 
-    <article class="modal fade" id="jedi" tabindex="-1" role="dialog" aria-labelledby="jedi" aria-hidden="true">
+    <article class="modal fade" id="jedi" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -213,7 +213,7 @@
         </div>
     </article>
 
-    <article class="modal fade" id="camera" tabindex="-1" role="dialog" aria-labelledby="camera" aria-hidden="true">
+    <article class="modal fade" id="camera" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -235,7 +235,7 @@
         </div>
     </article>
 
-    <article class="modal fade" id="stpat" tabindex="-1" role="dialog" aria-labelledby="stpat" aria-hidden="true">
+    <article class="modal fade" id="stpat" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -254,7 +254,7 @@
         </div>
     </article>
 
-    <article class="modal fade" id="selah" tabindex="-1" role="dialog" aria-labelledby="selah" aria-hidden="true">
+    <article class="modal fade" id="selah" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -272,7 +272,7 @@
         </div>
     </article>
 
-    <article class="modal fade" id="server" tabindex="-1" role="dialog" aria-labelledby="server" aria-hidden="true">
+    <article class="modal fade" id="server" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -291,7 +291,7 @@
         </div>
     </article>
 
-    <article class="modal fade" id="team" tabindex="-1" role="dialog" aria-labelledby="team" aria-hidden="true">
+    <article class="modal fade" id="team" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -306,7 +306,7 @@
                             version:<br><img src="resources/images/our-team_cap.jpg" class="img-responsive"></div>
                     </div>
                     <br>
-                    <button type="button" class="btn btn-default" onclick="window.open('http://www.servermonkey.com/our-team');" value="Visit Site">
+                    <button type="button" class="btn btn-default" onclick="window.open('https://web.archive.org/web/20170531112019/http://www.servermonkey.com/our-team');" value="Visit Site">
                         Visit Site
                     </button>
                     <br>
@@ -322,7 +322,7 @@
         </div>
     </article>
 
-    <article class="modal fade" id="slidedeck" tabindex="-1" role="dialog" aria-labelledby="slidedeck" aria-hidden="true">
+    <article class="modal fade" id="slidedeck" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -348,7 +348,7 @@
         </div>
     </article>
 
-    <article class="modal fade" id="icons2" tabindex="-1" role="dialog" aria-labelledby="icons2" aria-hidden="true">
+    <article class="modal fade" id="icons2" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -365,7 +365,7 @@
         </div>
     </article>
 
-    <article class="modal fade" id="gumpack" tabindex="-1" role="dialog" aria-labelledby="gumpack" aria-hidden="true">
+    <article class="modal fade" id="gumpack" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -384,7 +384,7 @@
         </div>
     </article>
 
-    <article class="modal fade" id="ornament" tabindex="-1" role="dialog" aria-labelledby="ornament" aria-hidden="true">
+    <article class="modal fade" id="ornament" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -403,7 +403,7 @@
         </div>
     </article>
 
-    <article class="modal fade" id="tekshield" tabindex="-1" role="dialog" aria-labelledby="tekshield" aria-hidden="true">
+    <article class="modal fade" id="tekshield" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -414,19 +414,25 @@
                     <img src="resources/images/basic-wireframe.PNG" class="img-responsive col-sm-6">
                     <img src="resources/images/tekshield-ss.png" class="img-responsive col-sm-6">
                     <p>&nbsp;</p>
-                    <button type="button" class="btn btn-default" onclick="window.open('http://www.tekshield.com');" value="See the site">
+                    <button type="button" class="btn btn-default" onclick="window.open('https://web.archive.org/web/20170503011100/http://www.servermonkey.com/tekshield');" value="See the site">
                         Visit Site
                     </button>
                 </div>
                 <div class="modal-footer">
-                    <p>Illustrator. HTML, CSS, JS. Bootstrap and JQuery. Responsive design. Update: added
-                        interactivity.</p>
+                    <p>
+                        Planned, researched, created all content (written and visual).<br>
+                        Responsive and interactive design following company brand guidelines.<br>
+                        Illustrator. HTML, CSS, JS. Bootstrap and JQuery. Logo.
+                    </p>
+                    <p>
+                        Looking back: address accessibility, optimize initial content above the fold, improve logo.
+                    </p>
                 </div>
             </div>
         </div>
     </article>
 
-    <article class="modal fade" id="smkbiz" tabindex="-1" role="dialog" aria-labelledby="smkbiz" aria-hidden="true">
+    <article class="modal fade" id="smkbiz" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -445,21 +451,19 @@
                     </p>
                     </div>
                     <br>
-                    <button type="button" class="btn btn-default" onclick="window.open('http://www.servermonkeybusiness.com');" value="See the site">
+                    <button type="button" class="btn btn-default" onclick="window.open('https://web.archive.org/web/20171231061942/http://servermonkeybusiness.com/');" value="See the site">
                         Visit Site
                     </button>
                 </div>
                 <div class="modal-footer">
-                    <p>HTML, CSS (LESS), JS. Bootstrap and JQuery. Responsive design.</p>
-                    <p>All parts including shrinking header nav, collapse nav, contact form, interactive contact hover,
-                        designed and coded from scratch using the technologies listed above. Sole developer after
-                        receiving original design.</p>
+                    <p>HTML, CSS (LESS), JS. Bootstrap and JQuery. Responsive design. Logo.</p>
+                    <p>Received initial static design (left). Redesigned and added interaction design including: shrinking header nav, collapse nav, contact form, contact hover.</p>
                 </div>
             </div>
         </div>
     </article>
 
-    <article class="modal fade" id="uhproject" tabindex="-1" role="dialog" aria-labelledby="uhproject" aria-hidden="true">
+    <article class="modal fade" id="uhproject" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -484,7 +488,7 @@
             </div>
         </div>
     </article>
-    <article class="modal fade" id="dashboard" tabindex="-1" role="dialog" aria-labelledby="dashboard" aria-hidden="true">
+    <article class="modal fade" id="dashboard" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -503,12 +507,15 @@
                     </button>
                 </div>
                 <div class="modal-footer">
-                    <p>UI design collaboration with Adam Barnes, project led by Marijana Brown.</p>
+                    <p>
+                        Followed company brand guide and UI design collaboration with senior graphic designer, Adam Barnes.<br>
+                        Reported to Digital Marketing Manager, Marijana Brown.
+                    </p>
                 </div>
             </div>
         </div>
     </article>
-<article class="modal fade" id="wireframe" tabindex="-1" role="dialog" aria-labelledby="wireframe" aria-hidden="true">
+<article class="modal fade" id="wireframe" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
@@ -524,6 +531,27 @@
             </div>
             <div class="modal-footer">
                 <p>Corporate brand approved document.</p>
+            </div>
+        </div>
+    </div>
+</article>
+    <article class="modal fade" id="realresults" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Convert PDF to Interactive</h4>
+            </div>
+            <div class="modal-body">
+                <p><img src="resources/images/wireframe-doc.jpg" class="img-responsive center-block"></p>
+                <p>Create more engaging content that is trackable.</p>
+                <button class="btn btn-default" onclick="window.open('/')" value="View PDF">
+                    View PDF
+                </button>
+            </div>
+            <div class="modal-footer">
+                <p>Interaction design. Turned template in Kentico CMS.</p>
+                <p>Collaboration with senior graphic designer, Adam Barnes, and all product line marketing managers.</p>
             </div>
         </div>
     </div>
