--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <br>
         <p>
             <a href="resources/files/TiffanyCheng_Resume_4-7-22.docx" target="_blank"><span class="glyphicon glyphicon-paperclip"></span> Resume.doc</a><br>
-            <a href="resources/files/TiffanyCheng_resume_portfolio.pdf" target="_blank"><span class="glyphicon glyphicon-paperclip"></span> Stylized-Resume.pdf</a>
+            <!-- <a href="resources/files/TiffanyCheng_resume_portfolio.pdf" target="_blank"><span class="glyphicon glyphicon-paperclip"></span> Stylized-Resume.pdf</a> -->
         </p>
         <!--
         <p class="tags">Tags: front end development, web design, vector illustration, logo creation, iconology, print,
@@ -31,33 +31,30 @@
 <section id="about">
     <div class="container">
         <h1>About Me</h1>
-        <p><i>*Thank you for taking the time to view my portfolio. I have just recently come back to update it after 4-5 years.<br>
-            Please come back again to see my progress!</i></p>
-        <h2>Formal Education</h2>
+        <h2>Education</h2>
         <p>At the University of Houston, my chosen program covered:</p>
         <ul>
             <li>web development,</li>
             <li>branding and design</li>
-            <li>computer languages such as PHP, SQL, and C++</li>
+            <li>programming languages such as PHP, SQL, and C++</li>
             <li>print and digital publishing,</li>
             <li>photography and videography,</li>
             <li>project management,</li>
             <li>leadership and supervision</li>
         </ul>
-        <h2>Self-Education</h2>
         <p>
-            I have been researching, learning, and practicing web development since the age of 13 when I got my first computer.<br>
-            I started creating my own websites using the frameworks on social sites, then from scratch.<br>
+            I have been researching, learning, and practicing web design and development since the age of 13,<br>
+            creating websites using the frameworks on social sites, then from scratch.<br>
             Over the years, I've spent hundreds of hours completing online courses and tutorials, and<br>
-            I am currently working on certifications from Google and the University of Michigan.<br>
+            I have completed certifications for <a href="https://coursera.org/share/ede90d9cc97bf3852e5ed23c737cd9e2" target="_blank">Foundations of UX Design</a> and <a href="https://drive.google.com/file/d/1_68VNTvmb_XwUWy4xPOQvOWR5JdGzJds/view?usp=sharing">Google Analytics</a>.<br>
             Through work and personal projects, I've honed in on these skills:
         </p>
         <ul>
-            <li>HTML and CSS with frameworks and preprocessors,</li>
-            <li>javascript - vanilla, jQuery, angular, vue.js,</li>
+            <li>HTML and CSS with frameworks and LESS/SCSS,</li>
+            <li>javascript - vanilla, jQuery, vue.js,</li>
             <li>wireframing and prototyping,</li>
             <li>responsive design,</li>
-            <li>web analytics</li>
+            <li>tracking and analytics</li>
         </ul>
         <h2>My Passions</h2>
         <p>
@@ -67,12 +64,12 @@
             My personal interests include:
         </p>
         <ul>
-            <li>sports and fitness - mainly flag football and yoga,</li>
+            <li>sports and fitness (flag football and yoga),</li>
             <li>hiking with my dogs,</li>
             <li>cooking and baking with healthy ingredients,</li>
             <li>lettering and typography,</li>
             <li>crafting with my Cricut and sewing machine</li>
-            <li>planning and organizing events with complex spreadsheets</li>
+            <li>planning and organizing events with formulated spreadsheets</li>
         </ul>
     </div>
 </section>
@@ -100,9 +97,9 @@
             <div class="col-lg-3 col-sm-6 col-xs-12">
                 <a href="#" data-toggle="modal" data-target="#icons"><img src="resources/images/thumbnails/icons_thumb.jpg" class="img-responsive"></a>
             </div>
-            <div class="col-lg-3 col-sm-6 col-xs-12">
+            <!-- <div class="col-lg-3 col-sm-6 col-xs-12">
                 <a href="#" data-toggle="modal" data-target="#icons2"><img src="resources/images/thumbnails/icons2_thumb.jpg" class="img-responsive"></a>
-            </div>
+            </div> -->
             <div class="col-lg-3 col-sm-6 col-xs-12">
                 <a href="#" data-toggle="modal" data-target="#jedi"><img src="resources/images/thumbnails/jedi_thumb.jpg" class="img-responsive"></a>
             </div>
@@ -128,10 +125,10 @@
             <div class="col-lg-3 col-sm-6 col-xs-12">
                 <a href="#" data-toggle="modal" data-target="#ornament"><img src="resources/images/thumbnails/ornament_thumb.jpg" class="img-responsive"></a>
             </div>
-            <div class="col-lg-3 col-sm-6 col-xs-12">
+            <!-- <div class="col-lg-3 col-sm-6 col-xs-12">
                 <a href="#" data-toggle="modal" data-target="#stpat"><img src="resources/images/thumbnails/stpatty-postcard_thumb.jpg" class="img-responsive"></a>
             </div>
-            <!-- <div class="col-lg-3 col-sm-6 col-xs-12">
+            <div class="col-lg-3 col-sm-6 col-xs-12">
                 <a href="#" data-toggle="modal" data-target="#selah"><img src="resources/images/thumbnails/selah_thumb.jpg" class="img-responsive"></a>
             </div> -->
             <div class="col-lg-3 col-sm-6 col-xs-12">
