--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 <section id="about">
     <div class="container">
         <h1>About Me</h1>
+        <p>
+            One of my greatest motivations is the desire to solve problems.<br>
+            Along with a mentality that nothing is ever perfect, I'm always finding ways to make improvements to every last detail.<br>
+            I'm also a people pleaser, and I love to help people in any way that I can.
+        </p>
         <h2>Education</h2>
         <p>At the University of Houston, my chosen program covered:</p>
         <ul>
@@ -43,11 +48,12 @@
             <li>leadership and supervision</li>
         </ul>
         <p>
-            I have been researching, learning, and practicing web design and development since the age of 13,<br>
-            creating websites using the frameworks on social sites, then from scratch.<br>
-            Over the years, I've spent hundreds of hours completing online courses and tutorials, and<br>
-            I have completed certifications for <a href="https://coursera.org/share/ede90d9cc97bf3852e5ed23c737cd9e2" target="_blank">Foundations of UX Design</a> and <a href="https://drive.google.com/file/d/1_68VNTvmb_XwUWy4xPOQvOWR5JdGzJds/view?usp=sharing">Google Analytics</a>.<br>
-            Through work and personal projects, I've honed in on these skills:
+            I have been researching, learning, and practicing web design and development since the age of 13.<br>
+            Fun fact: I initially started my college career on the pre-pharmacy path but quickly pivoted to my true calling.
+        </p>
+        <h2>Skills</h2>
+        <p>
+            Certifications: <a href="https://coursera.org/share/ede90d9cc97bf3852e5ed23c737cd9e2" target="_blank">Foundations of UX Design</a>, <a href="https://drive.google.com/file/d/1_68VNTvmb_XwUWy4xPOQvOWR5JdGzJds/view?usp=sharing">Google Analytics</a>, Lean Six Sigma.
         </p>
         <ul>
             <li>HTML and CSS with frameworks and LESS/SCSS,</li>
@@ -56,17 +62,10 @@
             <li>responsive design,</li>
             <li>tracking and analytics</li>
         </ul>
-        <h2>My Passions</h2>
-        <p>
-            One of my greatest motivations is the desire to solve problems.<br>
-            Along with a mentality that nothing is ever perfect, I'm always finding ways to make improvements to every last detail.<br>
-            I'm also a people pleaser, and I love to help people in any way that I can.<br>
-            My personal interests include:
-        </p>
+        <h2>Personal Interests</h2>
         <ul>
             <li>sports and fitness (flag football and yoga),</li>
             <li>hiking with my dogs,</li>
-            <li>cooking and baking with healthy ingredients,</li>
             <li>lettering and typography,</li>
             <li>crafting with my Cricut and sewing machine</li>
             <li>planning and organizing events with formulated spreadsheets</li>
@@ -144,9 +143,9 @@
             <a href="mailto:tiffscheng@gmail.com" title="tiffscheng@gmail.com"><img src="resources/images/icons/gmail-icon.png" class="icons"></a>
             <a href="http://www.linkedin.com/in/tiffscheng" title="LinkedIn/tiffscheng" target="_blank"><img src="resources/images/icons/in-icon.png" class="icons"></a>
             <a href="http://www.instagram.com/tifcheng" title="IG: @tifcheng" target="_blank"><img src="resources/images/icons/ig-icon.png" class="icons"></a>
-            <a href="https://www.yelp.com/user_details?userid=Wc8rjNAPjbv_IB8Isrgk-A" title="Yelp/TiffanyCheng" target="_blank"><img src="resources/images/icons/yelp-icon.png" class="icons"></a>
+            <!-- <a href="https://www.yelp.com/user_details?userid=Wc8rjNAPjbv_IB8Isrgk-A" title="Yelp/TiffanyCheng" target="_blank"><img src="resources/images/icons/yelp-icon.png" class="icons"></a> -->
         </p>
-        <form id="ajax" method="post" action="https://formspree.io/tiffscheng@gmail.com">
+        <!-- <form id="ajax" method="post" action="https://formspree.io/tiffscheng@gmail.com">
             <div class="field">
                 <label for="name" class="hidden">Name:</label>
                 <input class="form-control" type="text" id="name" name="name" placeholder="Name" required>
@@ -165,9 +164,10 @@
             <div class="field">
                 <button class="form-control" type="submit">Send</button>
             </div>
-        </form>
+        </form> -->
     </div>
 </section>
+    
     <!-- Begin Modals -->
     <article class="modal fade" id="icons" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg">
