Remove unnecessary commas

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         <h2>Education</h2>
         <p>At the University of Houston, my chosen program covered:</p>
         <ul>
-            <li>web development,</li>
+            <li>web development</li>
             <li>branding and design</li>
             <li>programming languages such as PHP, SQL, and C++</li>
-            <li>print and digital publishing,</li>
-            <li>photography and videography,</li>
-            <li>project management,</li>
+            <li>print and digital publishing</li>
+            <li>photography and videography</li>
+            <li>project management</li>
             <li>leadership and supervision</li>
         </ul>
         <p>
@@ -56,17 +56,17 @@
             Certifications: <a href="https://coursera.org/share/ede90d9cc97bf3852e5ed23c737cd9e2" target="_blank">Foundations of UX Design</a>, <a href="https://drive.google.com/file/d/1_68VNTvmb_XwUWy4xPOQvOWR5JdGzJds/view?usp=sharing">Google Analytics</a>, Lean Six Sigma.
         </p>
         <ul>
-            <li>HTML and CSS with frameworks and LESS/SCSS,</li>
-            <li>javascript - vanilla, jQuery, vue.js,</li>
-            <li>wireframing and prototyping,</li>
-            <li>responsive design,</li>
+            <li>HTML and CSS with frameworks and LESS/SCSS</li>
+            <li>javascript - vanilla, jQuery, vue.js</li>
+            <li>wireframing and prototyping</li>
+            <li>responsive design</li>
             <li>tracking and analytics</li>
         </ul>
         <h2>Personal Interests</h2>
         <ul>
-            <li>sports and fitness (flag football and yoga),</li>
-            <li>hiking with my dogs,</li>
-            <li>lettering and typography,</li>
+            <li>sports and fitness (flag football and yoga)</li>
+            <li>hiking with my dogs</li>
+            <li>lettering and typography</li>
             <li>crafting with my Cricut and sewing machine</li>
             <li>planning and organizing events with formulated spreadsheets</li>
         </ul>
