--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
             I'm also a people pleaser, and I love to help people in any way that I can.
         </p>
         <h2>Education</h2>
-        <p>At the University of Houston, my chosen program covered:</p>
+        <p>
+            Fun fact: I initially started my college career on the pre-pharmacy path but quickly pivoted to my true calling.<br>
+            At the University of Houston, the Digital Media program covered:
+        </p>
         <ul>
             <li>web development</li>
             <li>branding and design</li>
@@ -49,12 +52,9 @@
         </ul>
         <p>
             I have been researching, learning, and practicing web design and development since the age of 13.<br>
-            Fun fact: I initially started my college career on the pre-pharmacy path but quickly pivoted to my true calling.
-        </p>
-        <h2>Skills</h2>
-        <p>
             Certifications: <a href="https://coursera.org/share/ede90d9cc97bf3852e5ed23c737cd9e2" target="_blank">Foundations of UX Design</a>, <a href="https://drive.google.com/file/d/1_68VNTvmb_XwUWy4xPOQvOWR5JdGzJds/view?usp=sharing">Google Analytics</a>, Lean Six Sigma.
         </p>
+        <h2>Skills</h2>
         <ul>
             <li>HTML and CSS with frameworks and LESS/SCSS</li>
             <li>javascript - vanilla, jQuery, vue.js</li>
