Remove Skills section

--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
             I have been researching, learning, and practicing web design and development since the age of 13.<br>
             Certifications: <a href="https://coursera.org/share/ede90d9cc97bf3852e5ed23c737cd9e2" target="_blank">Foundations of UX Design</a>, <a href="https://drive.google.com/file/d/1_68VNTvmb_XwUWy4xPOQvOWR5JdGzJds/view?usp=sharing">Google Analytics</a>, Lean Six Sigma.
         </p>
-        <h2>Skills</h2>
+        <!-- <h2>Skills</h2>
         <ul>
             <li>HTML and CSS with frameworks and LESS/SCSS</li>
             <li>javascript - vanilla, jQuery, vue.js</li>
             <li>wireframing and prototyping</li>
             <li>responsive design</li>
             <li>tracking and analytics</li>
-        </ul>
+        </ul> -->
         <h2>Personal Interests</h2>
         <ul>
             <li>sports and fitness (flag football and yoga)</li>
