Real Results and Photo Contest

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p>
             One of my greatest motivations is the desire to solve problems.<br>
             Along with a mentality that nothing is ever perfect, I'm always finding ways to make improvements to every last detail.<br>
-            I'm also a people pleaser, and I love to help people in any way that I can.
+            I love to organize thoughts and ideas, and I am passionate about helping people in any way that I can.
         </p>
         <h2>Education</h2>
         <p>
@@ -77,6 +77,18 @@
         <h1>Sample Work</h1>
         <h2>Web Development</h2>
         <div class="row">
+            <div class="col-lg-3 col-sm-6 col-xs-12">
+                <a href="#" data-toggle="modal" data-target="#realresult">
+                    <img src="resources/images/thumbnails/placeholder.jpg" class="img-responsive">
+                    <span class="placeholder-title">Real Result</span>
+                </a>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-xs-12">
+                <a href="#" data-toggle="modal" data-target="#photocontest">
+                    <img src="resources/images/thumbnails/placeholder.jpg" class="img-responsive">
+                    <span class="placeholder-title">Photo Contest</span>
+                </a>
+            </div>
             <div class="col-lg-3 col-sm-6 col-xs-12">
                 <a href="#" data-toggle="modal" data-target="#dashboard"><img src="resources/images/thumbnails/dashboard-ss.jpg" class="img-responsive"></a>
             </div>
@@ -532,7 +544,7 @@
         </div>
     </div>
 </article>
-    <article class="modal fade" id="realresults" tabindex="-1" role="dialog" aria-hidden="true">
+<article class="modal fade" id="realresults" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
@@ -540,15 +552,38 @@
                 <h4 class="modal-title">Convert PDF to Interactive</h4>
             </div>
             <div class="modal-body">
-                <p><img src="resources/images/wireframe-doc.jpg" class="img-responsive center-block"></p>
+                <p><img src="resources/images/placeholder.jpg" class="img-responsive center-block"></p>
                 <p>Create more engaging content that is trackable.</p>
-                <button class="btn btn-default" onclick="window.open('/')" value="View PDF">
+                <!-- <button class="btn btn-default" onclick="window.open('/')" value="View PDF">
+                    View PDF
+                </button>&nbsp; -->
+                <button class="btn btn-default" onclick="window.open('https://github.com/tiffscheng/realresult')" value="View HiFi Prototype">
                     View PDF
                 </button>
             </div>
             <div class="modal-footer">
                 <p>Interaction design. Turned template in Kentico CMS.</p>
                 <p>Collaboration with senior graphic designer, Adam Barnes, and all product line marketing managers.</p>
+            </div>
+        </div>
+    </div>
+</article>
+<article class="modal fade" id="photocontest" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Photo Contest</h4>
+            </div>
+            <div class="modal-body">
+                <p><img src="resources/images/placeholder.jpg" class="img-responsive center-block"></p>
+                <p>Create more engaging content that is trackable.</p>
+                <button class="btn btn-default" onclick="window.open('https://github.com/tiffscheng/photocontest')" value="View HiFi Prototype">
+                    View PDF
+                </button>
+            </div>
+            <div class="modal-footer">
+                <p>Connected to forms and photo album to properly tag and catalog all submissions. Followed strict brand guidelines.</p>
             </div>
         </div>
     </div>
