--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
         <h2>Web Development</h2>
         <div class="row">
             <div class="col-lg-3 col-sm-6 col-xs-12">
-                <a href="#" data-toggle="modal" data-target="#realresult">
+                <a href="#" data-toggle="modal" data-target="#realresults">
                     <img src="resources/images/thumbnails/placeholder.jpg" class="img-responsive">
-                    <span class="placeholder-title">Real Result</span>
+                    <span class="placeholder-title">Real Results</span>
                 </a>
             </div>
             <div class="col-lg-3 col-sm-6 col-xs-12">
@@ -549,16 +549,16 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Convert PDF to Interactive</h4>
+                <h4 class="modal-title">Real Results</h4>
             </div>
             <div class="modal-body">
                 <p><img src="resources/images/placeholder.jpg" class="img-responsive center-block"></p>
-                <p>Create more engaging content that is trackable.</p>
+                <p>Create more engaging content that is trackable by converting static PDFs to interactive content.</p>
                 <!-- <button class="btn btn-default" onclick="window.open('/')" value="View PDF">
                     View PDF
                 </button>&nbsp; -->
                 <button class="btn btn-default" onclick="window.open('https://github.com/tiffscheng/realresult')" value="View HiFi Prototype">
-                    View PDF
+                    View Prototype
                 </button>
             </div>
             <div class="modal-footer">
@@ -579,7 +579,7 @@
                 <p><img src="resources/images/placeholder.jpg" class="img-responsive center-block"></p>
                 <p>Create more engaging content that is trackable.</p>
                 <button class="btn btn-default" onclick="window.open('https://github.com/tiffscheng/photocontest')" value="View HiFi Prototype">
-                    View PDF
+                    View Prototype
                 </button>
             </div>
             <div class="modal-footer">
