--- a/index.html
+++ b/index.html
@@ -557,8 +557,11 @@
                 <!-- <button class="btn btn-default" onclick="window.open('/')" value="View PDF">
                     View PDF
                 </button>&nbsp; -->
-                <button class="btn btn-default" onclick="window.open('https://github.com/tiffscheng/realresult')" value="View HiFi Prototype">
+                <button class="btn btn-default" onclick="window.open('https://tiffscheng.github.io/realresult')" value="View HiFi Prototype">
                     View Prototype
+                </button>
+                <button class="btn btn-default" onclick="window.open('https://github.com/tiffscheng/realresult')" value="View Code">
+                    View Code
                 </button>
             </div>
             <div class="modal-footer">
@@ -578,7 +581,7 @@
             <div class="modal-body">
                 <p><img src="resources/images/placeholder.jpg" class="img-responsive center-block"></p>
                 <p>Create more engaging content that is trackable.</p>
-                <button class="btn btn-default" onclick="window.open('https://github.com/tiffscheng/photocontest')" value="View HiFi Prototype">
+                <button class="btn btn-default" onclick="window.open('https://tiffscheng.github.io/photocontest')" value="View HiFi Prototype">
                     View Prototype
                 </button>
             </div>
