--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </p>
         <br>
         <p>
-            <a href="resources/files/TiffanyCheng_Resume_11-1-22.pdf" target="_blank"><span class="glyphicon glyphicon-paperclip"></span> Resume.doc</a><br>
+            <a href="resources/files/TiffanyCheng_Resume_11-1-22.pdf" target="_blank"><span class="glyphicon glyphicon-paperclip"></span> Resume.pdf</a><br>
             <!-- <a href="resources/files/TiffanyCheng_resume_portfolio.pdf" target="_blank"><span class="glyphicon glyphicon-paperclip"></span> Stylized-Resume.pdf</a> -->
         </p>
         <!--
