--- a/old/index.html
+++ b/old/index.html
@@ -79,16 +79,15 @@
         <div class="row">
             <div class="col-lg-3 col-sm-6 col-xs-12">
                 <a href="#" data-toggle="modal" data-target="#realresults">
-                    <img src="resources/images/thumbnails/placeholder.jpg" class="img-responsive">
-                    <span class="placeholder-title">Real Results</span>
+                    <img src="resources/images/thumbnails/realresult-ss.jpg" class="img-responsive">
                 </a>
             </div>
-            <div class="col-lg-3 col-sm-6 col-xs-12">
+            <!-- <div class="col-lg-3 col-sm-6 col-xs-12">
                 <a href="#" data-toggle="modal" data-target="#photocontest">
                     <img src="resources/images/thumbnails/placeholder.jpg" class="img-responsive">
                     <span class="placeholder-title">Photo Contest</span>
                 </a>
-            </div>
+            </div> -->
             <div class="col-lg-3 col-sm-6 col-xs-12">
                 <a href="#" data-toggle="modal" data-target="#dashboard"><img src="resources/images/thumbnails/dashboard-ss.jpg" class="img-responsive"></a>
             </div>
@@ -552,7 +551,7 @@
                 <h4 class="modal-title">Real Results</h4>
             </div>
             <div class="modal-body">
-                <p><img src="resources/images/thumbnails/placeholder.jpg" class="img-responsive center-block"></p>
+                <p><img src="resources/images/thumbnails/realresult-snippet.gif" class="img-responsive center-block"></p>
                 <p>Create more engaging content that is trackable by converting static PDFs to interactive content.</p>
                 <!-- <button class="btn btn-default" onclick="window.open('/')" value="View PDF">
                     View PDF
